--- a/styles/uno.css
+++ b/styles/uno.css
@@ -1,67 +1,43 @@
-
-.div1{
-    width: 30%;
-    position: relative;
-    height: 500px;  
-    left: 34%; 
-    /*background: rosybrown;*/
-}   
-
-.estPedido{
-    text-align: left;
-    background: rgb(66, 66, 182);
-    width: 150px;
-    height: 40px;
-    position: absolute;
-    right: 0;
-    color: lightgoldenrodyellow;
-    padding-top: 18px;
+.button {
+    float: right;
+    text-decoration: none;
+    text-align: center;
+    background: linear-gradient(50deg, rgb(238, 34, 34), rgb(40, 40, 199));
     font-size: 20px;
-    
+    width: 150px;
+    height: 32px;
+    padding: 20px;
+    color: white;
+    border-radius: 20px;
+    margin-top: 25px;
 }
 
-.div1-logo{
-    position: absolute;
-    top: -200px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+.button:hover {
+    background: linear-gradient(30deg, rgb(40, 40, 199), rgb(238, 34, 34), );
+    scale: 1.1;
 }
 
-.div1-p1, .div1-p2{
+.img1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    clear: both;
+}
+
+.ask-city {
     width: max-content;
     height: 30px;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.div1-p2{
-    font-size: 40px;
-    color: red;
-    top:330px;
-}
-
-.div1-form{
+.form {
     width: max-content;
-    position: absolute;
-    top: 300px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.div1-form-select{
+.form-select {
     display: block;
     width: 400px;
 }
-
-
-
-
