--- a/styles/uno.css
+++ b/styles/uno.css
@@ -1,5 +1,11 @@
-.button {
-    float: right;
+
+.flex-container{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.flex-item {
+    display: block ;
     text-decoration: none;
     text-align: center;
     background: linear-gradient(50deg, rgb(238, 34, 34), rgb(40, 40, 199));
@@ -10,11 +16,15 @@
     color: white;
     border-radius: 20px;
     margin-top: 25px;
+    box-shadow: 10px 10px 5px 5px rgb(216, 203, 203);
+
 }
 
-.button:hover {
+
+
+.flex-item:hover {
     background: linear-gradient(30deg, rgb(40, 40, 199), rgb(238, 34, 34), );
-    scale: 1.1;
+    scale: 0.9;
 }
 
 .img1 {
@@ -22,6 +32,7 @@
     margin-left: auto;
     margin-right: auto;
     clear: both;
+    max-width: 100%;
 }
 
 .ask-city {
@@ -41,3 +52,4 @@
     display: block;
     width: 400px;
 }
+
